[sonarqube] Fix reliability and maintainability issues in backend and frontend Backend Reliability: - Add timeout to .block() in AuditEventConsumer to prevent indefinite stalls - Narrow catch(Exception) in BlockchainWriterService with explicit Error handling - Add documentation for empty catch blocks in AuditLedgerBlockchainClient Backend Maintainability: - Replace magic numbers with named constants across all services:   * BlockchainWriterService: HEX_HASH_LENGTH, HEX_CHARS_PER_BYTE   * EventHashService: SHA_256, HEX_CHARS_PER_BYTE   * EventPersistenceService: RETRY_MAX_ATTEMPTS, RETRY_INITIAL_BACKOFF_MS   * AuditLedgerBlockchainClient: HEX_HASH_CHARS - Add JavaDoc explaining intentional duplication of entity-model classes - Remove outdated TODO comment from AuditEventDtoMapper - Remove redundant variables and fix unused parameters - Use List.getFirst() instead of deprecated get(0) (Java 21+) - Add @SuppressWarnings for deprecated JsonSerializer usage Frontend Reliability: - Add named variable to empty catch block in audit-dashboard component Frontend Maintainability: - Extract ApproximatePaginatorIntl to separate file - Move PAGE_SIZE_OPTIONS to static constants - Replace void operators with explicit Promise error handlers