@@ -43,6 +43,8 @@ public class AuditLedgerBlockchainClient {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(AuditLedgerBlockchainClient.class);
 
+    private static final int HEX_HASH_CHARS = 64;
+
     private static final Event RECORD_APPENDED_EVENT = new Event(
             "RecordAppended",
             Arrays.asList(
@@ -114,7 +116,7 @@ public class AuditLedgerBlockchainClient {
                     BlockchainIntegrityException.ErrorType.CONFIGURATION);
         }
 
-        return Boolean.TRUE.equals(((Bool) decoded.get(0)).getValue());
+        return Boolean.TRUE.equals(((Bool) decoded.getFirst()).getValue());
     }
 
     private Optional<AuditIntegrityCheckResponse.BlockchainRecord> locateBlockchainRecord(String contractAddress,
@@ -177,11 +179,13 @@ public class AuditLedgerBlockchainClient {
                     timestampFunction.getOutputParameters()
             );
 
-            if (decoded != null && !decoded.isEmpty() && decoded.get(0) instanceof Uint256) {
-                return ((Uint256) decoded.get(0)).getValue().longValue();
+            if (decoded != null && !decoded.isEmpty() && decoded.getFirst() instanceof Uint256) {
+                return ((Uint256) decoded.getFirst()).getValue().longValue();
             }
         } catch (Exception e) {
             LOGGER.debug("Failed to decode RecordAppended timestamp from event log; falling back to null", e);
+            // Intentionally returning null: timestamp is supplementary data;
+            // a decode failure must not prevent the integrity-check response from being returned.
             return null;
         }
 
@@ -193,7 +197,7 @@ public class AuditLedgerBlockchainClient {
         if (normalized.startsWith("0x") || normalized.startsWith("0X")) {
             normalized = normalized.substring(2);
         }
-        if (normalized.length() != 64 || !normalized.matches("[0-9a-fA-F]{64}")) {
+        if (normalized.length() != HEX_HASH_CHARS || !normalized.matches("[0-9a-fA-F]{64}")) {
             throw new BlockchainIntegrityException("event hash must be a 32-byte hex value",
                     BlockchainIntegrityException.ErrorType.CONFIGURATION);
         }
@@ -238,6 +242,7 @@ public class AuditLedgerBlockchainClient {
                     || "::1".equals(host)
                     || "host.docker.internal".equalsIgnoreCase(host);
         } catch (Exception ignored) {
+            // URI.create() may throw if the address is not parseable — treat as non-local
             return false;
         }
     }
